@@ -19,7 +19,7 @@ dependencies {
     }
     compile 'commons-jxpath:commons-jxpath:1.3'
     compile 'org.liquibase:liquibase-core:3.1.1'
-    compile('org.orbisgis:cts:1.3.3')
+    compile 'org.orbisgis:cts:1.3.3'
     testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
     testCompile 'org.codehaus.groovy:groovy-all:2.2.2'
     testCompile 'com.h2database:h2:1.3.174'
