@@ -20,6 +20,12 @@ Install an update
 Changes
 -------
 
+2014-07-11
+
+    * Supported survey design format exported in Collect Server
+    * Uniqueness or record keys are validated
+    * Fixed bug where record list wasn't properly updated when record key attribute changed
+
 2014-07-04
 
     * This version is required to run surveys defined with Collect 3.1.x
